--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@arco-design/web-react": "^2.32.2",
+    "ace-builds": "^1.4.14",
     "react": "^18.0.0",
+    "react-ace": "^10.1.0",
     "react-dom": "^18.0.0",
     "react-draggable": "^4.4.4",
     "react-xarrows": "^2.0.2"
