--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
-    "vite": "^2.9.5",
-    "vite-plugin-windicss": "^1.8.4",
-    "windicss": "^3.5.1"
+    "unocss": "^0.33.5",
+    "vite": "^2.9.5"
   }
 }
