--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@arco-design/web-react": "^2.32.2",
     "ace-builds": "^1.4.14",
+    "nanoid": "^3.3.4",
     "react": "^18.0.0",
     "react-ace": "^10.1.0",
     "react-dom": "^18.0.0",
